--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <body onload="onload()">
         <script src="script.js"></script>
         <div class="Content">
-            <div id="rhythm1" class="rhythmDot"></div>
-            <div id="rhythm2" class="rhythmDot" style="--color:rgb(44, 171, 255);"></div>
-            <div id="rhythm3" class="rhythmDot"></div>
-            <div id="rhythm4" class="rhythmDot" style="--color:rgb(44, 171, 255);"></div>
+            <div onclick="doInput(1)" id="rhythm1" class="rhythmDot"></div>
+            <div onclick="doInput(2)" id="rhythm2" class="rhythmDot" style="--color:rgb(44, 171, 255);"></div>
+            <div onclick="doInput(3)" id="rhythm3" class="rhythmDot"></div>
+            <div onclick="doInput(4)" id="rhythm4" class="rhythmDot" style="--color:rgb(44, 171, 255);"></div>
         </div>
     </body>
 </html>
