--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <body onload="onload()">
         <script src="script.js"></script>
         <div class="Content">
-            <div onclick="doInput(1)" id="rhythm1" class="rhythmDot"></div>
-            <div onclick="doInput(2)" id="rhythm2" class="rhythmDot" style="--color:rgb(44, 171, 255);"></div>
-            <div onclick="doInput(3)" id="rhythm3" class="rhythmDot"></div>
-            <div onclick="doInput(4)" id="rhythm4" class="rhythmDot" style="--color:rgb(44, 171, 255);"></div>
+            <div class="DotCenterer">
+                <div onclick="doInput(1)" id="rhythm1" class="rhythmDot"></div>
+                <div onclick="doInput(2)" id="rhythm2" class="rhythmDot" style="--color:var(--c-blue);"></div>
+                <div onclick="doInput(3)" id="rhythm3" class="rhythmDot"></div>
+                <div onclick="doInput(4)" id="rhythm4" class="rhythmDot" style="--color:var(--c-blue);"></div>
+            </div>
+            <div class="CanvasContainer">
+                <canvas id="PhysicsBodyCanvas"></canvas>
+            </div>
+            <div class="ResourceCounters">
+                <div class="Resource">
+                    <div class="icon" class="resourceCount-red"></div>
+                    <p class="resourceCount" id="resourceCount-red"></p>
+                </div>
+                <div class="Resource">
+                    <div class="icon" class="resourceCount-blue" style="--color:var(--c-blue)"></div>
+                    <p class="resourceCount" id="resourceCount-blue"></p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
