--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <div class="DotCenterer">
                 <div onclick="doInput(1)" id="rhythm1" class="rhythmDot"></div>
                 <div onclick="doInput(2)" id="rhythm2" class="rhythmDot" style="--color:var(--c-blue);"></div>
-                <div onclick="doInput(3)" id="rhythm3" class="rhythmDot"></div>
-                <div onclick="doInput(4)" id="rhythm4" class="rhythmDot" style="--color:var(--c-blue);"></div>
+                <div onclick="doInput(3)" id="rhythm3" class="rhythmDot" style="--color:var(--c-ora);"></div>
+                <div onclick="doInput(4)" id="rhythm4" class="rhythmDot" style="--color:var(--c-gre);"></div>
             </div>
             <div class="CanvasContainer">
                 <canvas id="PhysicsBodyCanvas"></canvas>
